--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,9 @@
             <div id="post">
                     <h1>Este es el titulo</h1>
                   <p>Y este es un parrafo de inicio donde se explican coas chidas</p>
+                  <p>
+                      Los blogs son lo mejor
+                  </p>
             </div>
         </div>
     </body>
