--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div  id="container">
             <div id="cabecera">
-                HiperBlog <span id="tagline">Tu blog de confianza</span>
+                HiperBlog <span id="tagline">Tu blog maestro</span>
             </div>
             <div id="post">
                     <h1>Este es el titulo</h1>
@@ -14,6 +14,7 @@
                   <p>
                       Los blogs son lo mejor
                   </p>
+                  <p>Sub y like</p>
             </div>
         </div>
     </body>
